Update image source path in gallery section

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ nav a:active { /* ADDED */
   <h2>Our Gallery</h2>
   <div class="gallery">
     <div class="gallery-item">
-      <img src="./Meynet/picture1.jpg" alt="Funeral Service 1">
+      <img src="picture1.jpg" alt="Funeral Service 1">
     </div>
     <div class="gallery-item">
       <img src="./Meynet/picture2.jpg" alt="Funeral Service 2">
