Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ nav a:active { /* ADDED */
 
 <header>
   <!-- EDIT: Added space for logo -->
-  <img src="images/logo.png" alt="Meynet Funerals Logo"> 
+  <img src="logo.png" alt="Meynet Funerals Logo"> 
   <h1>Meynet Funerals</h1>
   
   
@@ -282,7 +282,7 @@ nav a:active { /* ADDED */
   </div>
   <div class="hero-video"><!-- EDIT -->
     <!-- Replace sample.mp4 with your actual video file -->
-    <img src="./Meynet/video.gif" alt="gif">
+    <img src="video.gif" alt="gif">
     </video>
   </div>
 </section>
@@ -327,10 +327,10 @@ nav a:active { /* ADDED */
       <img src="picture1.jpg" alt="Funeral Service 1">
     </div>
     <div class="gallery-item">
-      <img src="./Meynet/picture2.jpg" alt="Funeral Service 2">
+      <img src="picture2.jpg" alt="Funeral Service 2">
     </div>
     <div class="gallery-item">
-      <img src="./Meynet/picture3.jpg" alt="Funeral Service 3">
+      <img src="picture3.jpg" alt="Funeral Service 3">
     </div>
   </div>
 </section>
